--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       <!-- ---------------------------Products list section----------------------------->
       <section class="py-[25px] lg:py-6">
         <ul class="list flex flex-col flex-wrap items-center justify-center gap-12 md:flex-row md:gap-x-6"></ul>
+        <ul class="pagination-list flex gap-4 justify-center pt-6"></ul>
       </section>
 
       <!-- ---------------------------Sign-up section----------------------------------->
@@ -116,7 +117,7 @@
           <form class="form mt-6 h-[43px] space-x-3 flex justify-center w-full">
             <input
               type="email"
-              class="p-4 rounded bg-white h-[43px] w-auto lg:w-[518px] hover:shadow-outline focus:shadow-outline placeholder:text-black text-base font-semibold"
+              class="p-4 rounded bg-white h-[43px] w-auto lg:w-[518px] hover:shadow-ligthOrange focus:shadow-ligthOrange placeholder:text-black text-base font-semibold"
               placeholder="E-mail"
             />
             <button
